<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_fundo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Controller.Amigos.AtualizarAmigos">

        <Button
            android:id="@+id/btnVoltarTela"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_margin="10sp"
            android:background="@drawable/ic_action_voltar"
            android:onClick="sairDaTelaAtualizarAmigo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtAttAmigos"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txtAttAmigos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAttAmigo"
            android:textColor="@color/detalhes"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/AreaAttAmigos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/AreaAttAmigos"
            android:layout_width="300sp"
            android:layout_height="match_parent"
            android:layout_marginTop="50sp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAttAmigos">

            <TextView
                android:id="@+id/txtNick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtNick"
                android:textColor="@color/detalhes"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editNickNameAtt"
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:layout_margin="10sp"
                android:autofillHints=""
                android:background="@color/cor_EditText"
                android:hint="@string/editNick"
                android:inputType="text"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:textColor="@color/detalhes"
                android:textColorHint="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEmail"
                android:textColor="@color/detalhes"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editEmailAtt"
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:layout_margin="10sp"
                android:autofillHints=""
                android:background="@color/cor_EditText"
                android:hint="@string/editEmail"
                android:inputType="textEmailAddress"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:textColor="@color/detalhes"
                android:textColorHint="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtTel"
                android:textColor="@color/detalhes"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTelefoneAtt"
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:layout_margin="10sp"
                android:autofillHints=""
                android:background="@color/cor_EditText"
                android:hint="@string/editTel"
                android:inputType="phone"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:textColor="@color/detalhes"
                android:textColorHint="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPlataformaQjoga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="20sp"
                android:text="@string/txtJogaOnde"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbPcAtt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/detalhes"
                android:text="@string/txtPC"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbConsoleAtt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/detalhes"
                android:text="@string/txtConsole"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbMobileAtt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/detalhes"
                android:text="@string/txtMobile"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/botoes_style"
            android:onClick="atualizarAmigo"
            android:text="@string/btn_atualizar"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AreaAttAmigos" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>