<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_fundo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.Amigos.CadastroAmigos">

        <Button
            android:id="@+id/btnVoltarTela"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_margin="10sp"
            android:background="@drawable/ic_action_voltar"
            android:onClick="sairDaTelaCadastroAmigos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtAmigos"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txtAmigos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="49dp"
            android:text="@string/txtCadAmigos"
            android:textColor="@color/detalhes"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/AreaCadAmigos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/AreaCadAmigos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnAddAMigo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAmigos">

            <EditText
                android:id="@+id/editNickName"
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:layout_margin="10sp"
                android:autofillHints=""
                android:background="@color/cor_EditText"
                android:hint="@string/editNick"
                android:inputType="text"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:textColor="@color/detalhes"
                android:textColorHint="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:layout_margin="10sp"
                android:autofillHints=""
                android:background="@color/cor_EditText"
                android:hint="@string/editEmail"
                android:inputType="textEmailAddress"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:textColor="@color/detalhes"
                android:textColorHint="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTelefone"
                android:layout_width="300sp"
                android:layout_height="40sp"
                android:layout_margin="10sp"
                android:autofillHints=""
                android:background="@color/cor_EditText"
                android:hint="@string/editTel"
                android:inputType="phone"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:textColor="@color/detalhes"
                android:textColorHint="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPlataformaQjoga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="20sp"
                android:text="@string/txtJogaOnde"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbPc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/detalhes"
                android:text="@string/txtPC"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbConsole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/detalhes"
                android:text="@string/txtConsole"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/detalhes"
                android:text="@string/txtMobile"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddAMigo"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="100sp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/botoes_style"
            android:onClick="cadastrarAmigo"
            android:text="@string/btn_adiconar"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AreaCadAmigos" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>