<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_fundo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Controller.Usuario.AtualizarUsuario">

        <Button
            android:id="@+id/btnVoltarTela"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:background="@drawable/ic_action_voltar"
            android:onClick="sairDaTelaAtualizarUsuario"
            app:layout_constraintBottom_toTopOf="@+id/Area_Atualizacao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtAtualizarUsuario" />

        <TextView
            android:id="@+id/txtAtualizarUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:text="@string/txtAtualizarUsuario"
            android:textColor="@color/detalhes"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Area_Atualizacao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/Area_Atualizacao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="40sp"
            android:layout_marginBottom="130sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtNomeUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/txtNomeUsuario"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditUsuarioAtual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:autofillHints=""
                android:background="@color/cor_EditText"
                android:hint="@string/EditUsuario"
                android:inputType="text"
                android:padding="10sp"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIdadeAtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtIdade"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBarIdadeAtual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="30sp"
                android:max="100"
                android:progressTint="@color/detalhes"
                android:thumbTint="@color/detalhes" />

            <TextView
                android:id="@+id/ResultadoIdadeAtual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:text="@string/txtSenha"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditSenhaAtual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@color/cor_EditText"
                android:hint="@string/EditSenha"
                android:inputType="numberPassword"
                android:padding="10sp"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:text="@string/txtSexo"
                android:textColor="@color/detalhes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/Area_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/masculinoAtual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/GradienteBotaoMeio"
                    android:checked="false"
                    android:text="@string/txtMasculino"
                    android:textColor="@color/detalhes"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/femininoAtual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/GradienteBotaoMeio"
                    android:text="@string/txtFeminino"
                    android:textColor="@color/detalhes"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </RadioGroup>
            <ProgressBar
                android:id="@+id/progressBarAtual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/detalhes"
                android:progressBackgroundTint="@color/detalhes"
                android:visibility="invisible" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_atualizar"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/botoes_style"
            android:onClick="atualizarUsuario"
            android:text="@string/btn_atualizar"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Area_Atualizacao" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>